# KUKA_LWR4_Energy_Constraints

./: CMakeLists.txt  CMakeLists.txt~  Makefile  kuka_controller.kdev4  manifest.xml
.kdev4/: _custom.kdev4  kuka_controller.kdev4
ORIGINAL KUKA XML WITH ORIGINAL pods/: kuka.xml  readme
_build/: CMakeCache.txt
include/: Absolute.h  Compute_distance.h  Compute_distance.h~  Compute_energy.h  Compute_energy.h~  Compute_prj_velocity.h  Compute_prj_velocity.h~  Compute_vectors.h  Compute_vectors.h~  Compute_velocity.h~  G4_P3_Solver.h  G4_P3_Solver.h~  G4_P4_ApproxEqual.h  G4_P4_Solver.h  G4_P4_Solver.h~  Global_time.h  Interpolation.h  Interpolation.h~  Jacobian_operations.h  Maximum.h  Maximum.h~  Minimum.h  Minimum.h~  MyNLP.hpp  MyNLP.hpp~  QP.h  QP.h~  XDESimpleController.h  XDESimpleController.h~  choose_int_root_n.h  choose_int_root_n.h~  choose_int_root_n_P3.h  choose_int_root_n_P3.h~  choose_q_ddot_final_bounds.h  choose_q_ddot_final_bounds.h~  comp_constr_generator.h  comp_constr_generator.h~  compute_n.h  compute_n.h~  optimize_K.h  (+7 more)
python/: 3D_mouse_save.py  3Dmouse_read.py~  ThDmouse_read.py~  common.py  common.py~  dense.lp  energy_plot.py  energy_plot.py~  energy_plot.txt  energy_plot1.py  energy_plot1.py~  energy_plot1.txt  kukacommon.py  kukacommon.py~  main.py  main.py~  main_2DDL.py~  main_FullDDL.py  model.ilp  myglobals.py  obj_move.py  obj_move.py~  obst_switch.txt  obst_switch.txt~  parameters.py  parameters.py~  plot_data.py  plot_data.py~  plot_data2.py  plot_data2.py~  plot_data3.py  plot_data3.py~  plot_exe.txt  (+40 more)
src/: Absolute.cpp~  CMakeLists.txt  CMakeLists.txt~  Compute_distance.cpp  Compute_distance.cpp~  Compute_energy.cpp  Compute_energy.cpp~  Compute_prj_velocity.cpp  Compute_vectors.cpp~  Compute_velocity.cpp~  G4AnalyticalPolSolver.cpp~  G4_P3_Solver.cpp  G4_P3_Solver.cpp~  G4_P4_ApproxEqual.cpp  G4_P4_Solver.cpp  G4_P4_Solver.cpp~  Global_time.cpp  Global_time.cpp~  Interpolation.cpp~  Jacobian_operations.cpp  Makefile~  Maximum.cpp  Maximum.cpp~  Minimum.cpp~  MyNLP.cpp  MyNLP.cpp~  QP.cpp  QP.cpp~  QP_evitement.cpp  QP_evitement.cpp~  XDESimpleController.cpp  XDESimpleController.cpp~  choose_int_root_n.cpp  choose_int_root_n.cpp~  choose_int_root_n_P3.cpp~  choose_q_ddot_final_bounds.cpp  choose_q_ddot_final_bounds.cpp~  comp_constr_generator.cpp  comp_constr_generator.cpp~  comp_contr_generator.cpp~  (+15 more)
(+38 files in other folders)
